--- a/manifest.plist
+++ b/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/huseyincandan/cepmusavir/master/cm.ipa</string>
+					<string>https://github.com/huseyincandan/cepmusavir/raw/master/cm.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/huseyincandan/cepmusavir/master/57.png</string>
+					<string>https://github.com/huseyincandan/cepmusavir/raw/master/57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/huseyincandan/cepmusavir/master/512.png</string>
+					<string>https://github.com/huseyincandan/cepmusavir/raw/master/512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -31,9 +31,11 @@
 				<key>bundle-identifier</key>
 				<string>com.huseyincandan.cepmusavir</string>
 				<key>bundle-version</key>
-				<string>2.0.26</string>
+				<string>2.0.29</string>
 				<key>kind</key>
 				<string>software</string>
+				<key>platform-identifier</key>
+				<string>com.apple.platform.iphoneos</string>
 				<key>title</key>
 				<string>Cep Müşavir</string>
 			</dict>
